# cmip6-stat-downscaled-over-italy-download

./: .gitignore  README.md  data_download.py  data_transfer.ipynb  pyproject.toml  requirements.txt  vars_configuration.py
vars/: hurs-future.json  hurs-hist.json  pr-future.json  pr-hist.json  sfcWind-future.json  sfcWind-hist.json  tas-future.json  tas-hist.json  tasmax-future.json  tasmax-hist.json  tasmin-future.json  tasmin-hist.json
