[project]
name = "cmip6-stat-downscaled-over-italy-download"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ddsapi", "tqdm"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
reportMissingTypeStubs = false
reportAny = false
