[project]
name = "cmip6-stat-downscaled-over-italy-download"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddsapi",
    "requests>=2.32.5",
    "tqdm",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
reportMissingTypeStubs = false
reportAny = false

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
