[project]
name = "cmip6-stat-downscaled-over-italy-download"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = ["ddsapi", "requests", "tqdm"]

[tool.basedpyright]
reportMissingTypeStubs = false
reportAny = false

[dependency-groups]
dev = ["ipykernel>=7.1.0"]
